exports[`invalid(1): @media (unknown-feature) {} 1`] = `

  1 | @media (unknown-feature) {}

`;

exports[`invalid(1): @media (unknown-feature) {} 2`] = `

Message:
> 1 | @media (unknown-feature) {}
    |         ^^^^^^^^^^^^^^^ Unknown media feature \`unknown-feature\`.

`;

exports[`invalid(10): @media (width: var(--breakpoint)) {} 1`] = `

  1 | @media (width: var(--breakpoint)) {}

`;

exports[`invalid(10): @media (width: var(--breakpoint)) {} 2`] = `

Message:
> 1 | @media (width: var(--breakpoint)) {}
    |                ^^^^^^^^^^^^^^^^^ Invalid value \`var(--breakpoint)\` for media feature \`width\`. Expected <length>.

`;

exports[`invalid(11): @media (width: calc(var(--breakpoint) + env(safe-area-inset-left))) {} 1`] = `

  1 | @media (width: calc(var(--breakpoint) + env(safe-area-inset-left))) {}

`;

exports[`invalid(11): @media (width: calc(var(--breakpoint) + env(safe-area-inset-left))) {} 2`] = `

Message:
> 1 | @media (width: calc(var(--breakpoint) + env(safe-area-inset-left))) {}
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid value \`calc(var(--breakpoint) + env(safe-area-inset-left))\` for media feature \`width\`. Expected <length>.

`;

exports[`invalid(12): @media (color: 1.5) {} 1`] = `

  1 | @media (color: 1.5) {}

`;

exports[`invalid(12): @media (color: 1.5) {} 2`] = `

Message:
> 1 | @media (color: 1.5) {}
    |                ^^^ Invalid value \`1.5\` for media feature \`color\`. Expected <integer>.

`;

exports[`invalid(13): @media (width: rgb(0 0 0)) {} 1`] = `

  1 | @media (width: rgb(0 0 0)) {}

`;

exports[`invalid(13): @media (width: rgb(0 0 0)) {} 2`] = `

Message:
> 1 | @media (width: rgb(0 0 0)) {}
    |                ^^^^^^^^^^ Invalid value \`rgb(0 0 0)\` for media feature \`width\`. Expected <length>.

`;

exports[`invalid(14): @media (min-device-pixel-ratio: 2) {} 1`] = `

  1 | @media (min-device-pixel-ratio: 2) {}

`;

exports[`invalid(14): @media (min-device-pixel-ratio: 2) {} 2`] = `

Message:
> 1 | @media (min-device-pixel-ratio: 2) {}
    |         ^^^^^^^^^^^^^^^^^^^^^^ Unknown media feature \`min-device-pixel-ratio\`.

`;

exports[`invalid(15): @media (min-widht: 10px) {} 1`] = `

  1 | @media (min-widht: 10px) {}

`;

exports[`invalid(15): @media (min-widht: 10px) {} 2`] = `

Message:
> 1 | @media (min-widht: 10px) {}
    |         ^^^^^^^^^ Unknown media feature \`min-widht\`.

`;

exports[`invalid(16): @media (aspect-ratio: 10px) {} 1`] = `

  1 | @media (aspect-ratio: 10px) {}

`;

exports[`invalid(16): @media (aspect-ratio: 10px) {} 2`] = `

Message:
> 1 | @media (aspect-ratio: 10px) {}
    |                       ^^^^ Invalid value \`10px\` for media feature \`aspect-ratio\`. Expected <ratio>.

`;

exports[`invalid(17): @media (resolution: 10px) {} 1`] = `

  1 | @media (resolution: 10px) {}

`;

exports[`invalid(17): @media (resolution: 10px) {} 2`] = `

Message:
> 1 | @media (resolution: 10px) {}
    |                     ^^^^ Invalid value \`10px\` for media feature \`resolution\`. Expected <resolution> | infinite.

`;

exports[`invalid(18): @media (grid: 2) {} 1`] = `

  1 | @media (grid: 2) {}

`;

exports[`invalid(18): @media (grid: 2) {} 2`] = `

Message:
> 1 | @media (grid: 2) {}
    |               ^ Invalid value \`2\` for media feature \`grid\`. Expected <integer [0,1]>.

`;

exports[`invalid(19): @media (orientation: square) {} 1`] = `

  1 | @media (orientation: square) {}

`;

exports[`invalid(19): @media (orientation: square) {} 2`] = `

Message:
> 1 | @media (orientation: square) {}
    |                      ^^^^^^ Invalid value \`square\` for media feature \`orientation\`. Expected portrait | landscape.

`;

exports[`invalid(2): @media (unknown-feature: 10px) {} 1`] = `

  1 | @media (unknown-feature: 10px) {}

`;

exports[`invalid(2): @media (unknown-feature: 10px) {} 2`] = `

Message:
> 1 | @media (unknown-feature: 10px) {}
    |         ^^^^^^^^^^^^^^^ Unknown media feature \`unknown-feature\`.

`;

exports[`invalid(20): @media (display-mode: windowed) {} 1`] = `

  1 | @media (display-mode: windowed) {}

`;

exports[`invalid(20): @media (display-mode: windowed) {} 2`] = `

Message:
> 1 | @media (display-mode: windowed) {}
    |                       ^^^^^^^^ Invalid value \`windowed\` for media feature \`display-mode\`. Expected fullscreen | standalone | minimal-ui | browser | picture-in-picture | window-controls-overlay.

`;

exports[`invalid(21): @media (device-posture: flat) {} 1`] = `

  1 | @media (device-posture: flat) {}

`;

exports[`invalid(21): @media (device-posture: flat) {} 2`] = `

Message:
> 1 | @media (device-posture: flat) {}
    |                         ^^^^ Invalid value \`flat\` for media feature \`device-posture\`. Expected continuous | folded.

`;

exports[`invalid(22): @media (shape: square) {} 1`] = `

  1 | @media (shape: square) {}

`;

exports[`invalid(22): @media (shape: square) {} 2`] = `

Message:
> 1 | @media (shape: square) {}
    |                ^^^^^^ Invalid value \`square\` for media feature \`shape\`. Expected rect | round.

`;

exports[`invalid(23): @media (red < width < blue) {} 1`] = `

  1 | @media (red < width < blue) {}

`;

exports[`invalid(23): @media (red < width < blue) {} 2`] = `

Message:
> 1 | @media (red < width < blue) {}
    |         ^^^ Invalid value \`red\` for media feature \`width\`. Expected <length>.

`;

exports[`invalid(23): @media (red < width < blue) {} 3`] = `

Message:
> 1 | @media (red < width < blue) {}
    |                       ^^^^ Invalid value \`blue\` for media feature \`width\`. Expected <length>.

`;

exports[`invalid(24): @media (　　unknown-feature) {} 1`] = `

  1 | @media (　　unknown-feature) {}

`;

exports[`invalid(24): @media (　　unknown-feature) {} 2`] = `

Message:
> 1 | @media (　　unknown-feature) {}
    |         ^^^^^^^^^^^^^^^^^ Unknown media feature \`　　unknown-feature\`.

`;

exports[`invalid(25): @media (min-width) {} 1`] = `

  1 | @media (min-width) {}

`;

exports[`invalid(25): @media (min-width) {} 2`] = `

Message:
> 1 | @media (min-width) {}
    |         ^^^^^^^^^ Media feature \`min-width\` requires a value in plain notation.

`;

exports[`invalid(26): @media (max-height) {} 1`] = `

  1 | @media (max-height) {}

`;

exports[`invalid(26): @media (max-height) {} 2`] = `

Message:
> 1 | @media (max-height) {}
    |         ^^^^^^^^^^ Media feature \`max-height\` requires a value in plain notation.

`;

exports[`invalid(27): @media (MIN-WIDTH) {} 1`] = `

  1 | @media (MIN-WIDTH) {}

`;

exports[`invalid(27): @media (MIN-WIDTH) {} 2`] = `

Message:
> 1 | @media (MIN-WIDTH) {}
    |         ^^^^^^^^^ Media feature \`MIN-WIDTH\` requires a value in plain notation.

`;

exports[`invalid(28): @media (m\\61 x-width) {} 1`] = `

  1 | @media (m\\61 x-width) {}

`;

exports[`invalid(28): @media (m\\61 x-width) {} 2`] = `

Message:
> 1 | @media (m\\61 x-width) {}
    |         ^^^^^^^^^^^^ Media feature \`m\\61 x-width\` requires a value in plain notation.

`;

exports[`invalid(29): @media (/* before */ min-width /* name */) {} 1`] = `

  1 | @media (/* before */ min-width /* name */) {}

`;

exports[`invalid(29): @media (/* before */ min-width /* name */) {} 2`] = `

Message:
> 1 | @media (/* before */ min-width /* name */) {}
    |                      ^^^^^^^^^ Media feature \`min-width\` requires a value in plain notation.

`;

exports[`invalid(3): @media (/* before */ unknown-feature /* name */: 10px) {} 1`] = `

  1 | @media (/* before */ unknown-feature /* name */: 10px) {}

`;

exports[`invalid(3): @media (/* before */ unknown-feature /* name */: 10px) {} 2`] = `

Message:
> 1 | @media (/* before */ unknown-feature /* name */: 10px) {}
    |                      ^^^^^^^^^^^^^^^ Unknown media feature \`unknown-feature\`.

`;

exports[`invalid(30): @media (orientation > portrait) {} 1`] = `

  1 | @media (orientation > portrait) {}

`;

exports[`invalid(30): @media (orientation > portrait) {} 2`] = `

Message:
> 1 | @media (orientation > portrait) {}
    |         ^^^^^^^^^^^ Media feature \`orientation\` does not support range notation.

`;

exports[`invalid(31): @media (portrait < orientation) {} 1`] = `

  1 | @media (portrait < orientation) {}

`;

exports[`invalid(31): @media (portrait < orientation) {} 2`] = `

Message:
> 1 | @media (portrait < orientation) {}
    |                    ^^^^^^^^^^^ Media feature \`orientation\` does not support range notation.

`;

exports[`invalid(32): @media (grid >= 0) {} 1`] = `

  1 | @media (grid >= 0) {}

`;

exports[`invalid(32): @media (grid >= 0) {} 2`] = `

Message:
> 1 | @media (grid >= 0) {}
    |         ^^^^ Media feature \`grid\` does not support range notation.

`;

exports[`invalid(33): @media (ORIENTATION > portrait) {} 1`] = `

  1 | @media (ORIENTATION > portrait) {}

`;

exports[`invalid(33): @media (ORIENTATION > portrait) {} 2`] = `

Message:
> 1 | @media (ORIENTATION > portrait) {}
    |         ^^^^^^^^^^^ Media feature \`ORIENTATION\` does not support range notation.

`;

exports[`invalid(34): @media (o\\72 ientation > portrait) {} 1`] = `

  1 | @media (o\\72 ientation > portrait) {}

`;

exports[`invalid(34): @media (o\\72 ientation > portrait) {} 2`] = `

Message:
> 1 | @media (o\\72 ientation > portrait) {}
    |         ^^^^^^^^^^^^^^ Media feature \`o\\72 ientation\` does not support range notation.

`;

exports[`invalid(35): @media (orientation > square) {} 1`] = `

  1 | @media (orientation > square) {}

`;

exports[`invalid(35): @media (orientation > square) {} 2`] = `

Message:
> 1 | @media (orientation > square) {}
    |         ^^^^^^^^^^^ Media feature \`orientation\` does not support range notation.

`;

exports[`invalid(36): @media (orientation > theme(--orientation)) {} 1`] = `

  1 | @media (orientation > theme(--orientation)) {}

`;

exports[`invalid(36): @media (orientation > theme(--orientation)) {} 2`] = `

Message:
> 1 | @media (orientation > theme(--orientation)) {}
    |         ^^^^^^^^^^^ Media feature \`orientation\` does not support range notation.

`;

exports[`invalid(37): @media (min-width > 10px) {} 1`] = `

  1 | @media (min-width > 10px) {}

`;

exports[`invalid(37): @media (min-width > 10px) {} 2`] = `

Message:
> 1 | @media (min-width > 10px) {}
    |         ^^^^^^^^^ Media feature \`min-width\` does not support range notation.

`;

exports[`invalid(38): @media (10px < max-width) {} 1`] = `

  1 | @media (10px < max-width) {}

`;

exports[`invalid(38): @media (10px < max-width) {} 2`] = `

Message:
> 1 | @media (10px < max-width) {}
    |                ^^^^^^^^^ Media feature \`max-width\` does not support range notation.

`;

exports[`invalid(39): @media (MAX-WIDTH > 10px) {} 1`] = `

  1 | @media (MAX-WIDTH > 10px) {}

`;

exports[`invalid(39): @media (MAX-WIDTH > 10px) {} 2`] = `

Message:
> 1 | @media (MAX-WIDTH > 10px) {}
    |         ^^^^^^^^^ Media feature \`MAX-WIDTH\` does not support range notation.

`;

exports[`invalid(4): @media (/* unknown-feature */ unknown-feature: 10px) {} 1`] = `

  1 | @media (/* unknown-feature */ unknown-feature: 10px) {}

`;

exports[`invalid(4): @media (/* unknown-feature */ unknown-feature: 10px) {} 2`] = `

Message:
> 1 | @media (/* unknown-feature */ unknown-feature: 10px) {}
    |                               ^^^^^^^^^^^^^^^ Unknown media feature \`unknown-feature\`.

`;

exports[`invalid(40): @media (m\\69 n-width > 10px) {} 1`] = `

  1 | @media (m\\69 n-width > 10px) {}

`;

exports[`invalid(40): @media (m\\69 n-width > 10px) {} 2`] = `

Message:
> 1 | @media (m\\69 n-width > 10px) {}
    |         ^^^^^^^^^^^^ Media feature \`m\\69 n-width\` does not support range notation.

`;

exports[`invalid(41): @media (min-width > red) {} 1`] = `

  1 | @media (min-width > red) {}

`;

exports[`invalid(41): @media (min-width > red) {} 2`] = `

Message:
> 1 | @media (min-width > red) {}
    |         ^^^^^^^^^ Media feature \`min-width\` does not support range notation.

`;

exports[`invalid(42): @media (10px < min-width < 20px) {} 1`] = `

  1 | @media (10px < min-width < 20px) {}

`;

exports[`invalid(42): @media (10px < min-width < 20px) {} 2`] = `

Message:
> 1 | @media (10px < min-width < 20px) {}
    |                ^^^^^^^^^ Media feature \`min-width\` does not support range notation.

`;

exports[`invalid(43): @media (10px < width > 20px) {} 1`] = `

  1 | @media (10px < width > 20px) {}

`;

exports[`invalid(43): @media (10px < width > 20px) {} 2`] = `

Message:
> 1 | @media (10px < width > 20px) {}
    |        ^^^^^^^^^^^^^^^^^^^^^ Chained media feature comparisons must place the feature between two values and use the same comparison direction.

`;

exports[`invalid(44): @media (20px >= width <= 10px) {} 1`] = `

  1 | @media (20px >= width <= 10px) {}

`;

exports[`invalid(44): @media (20px >= width <= 10px) {} 2`] = `

Message:
> 1 | @media (20px >= width <= 10px) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^^ Chained media feature comparisons must place the feature between two values and use the same comparison direction.

`;

exports[`invalid(45): @media (width < 10px < 20px) {} 1`] = `

  1 | @media (width < 10px < 20px) {}

`;

exports[`invalid(45): @media (width < 10px < 20px) {} 2`] = `

Message:
> 1 | @media (width < 10px < 20px) {}
    |        ^^^^^^^^^^^^^^^^^^^^^ Chained media feature comparisons must place the feature between two values and use the same comparison direction.

`;

exports[`invalid(46): @media (10px < 20px < width) {} 1`] = `

  1 | @media (10px < 20px < width) {}

`;

exports[`invalid(46): @media (10px < 20px < width) {} 2`] = `

Message:
> 1 | @media (10px < 20px < width) {}
    |        ^^^^^^^^^^^^^^^^^^^^^ Chained media feature comparisons must place the feature between two values and use the same comparison direction.

`;

exports[`invalid(47): @media (/* before */ 10px /* left */ < width /* middle */ > 20px) {} 1`] = `

  1 | @media (/* before */ 10px /* left */ < width /* middle */ > 20px) {}

`;

exports[`invalid(47): @media (/* before */ 10px /* left */ < width /* middle */ > 20px) {} 2`] = `

Message:
> 1 | @media (/* before */ 10px /* left */ < width /* middle */ > 20px) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Chained media feature comparisons must place the feature between two values and use the same comparison direction.

`;

exports[`invalid(48): @media (theme(--minimum) < width > theme(--maximum)) {} 1`] = `

  1 | @media (theme(--minimum) < width > theme(--maximum)) {}

`;

exports[`invalid(48): @media (theme(--minimum) < width > theme(--maximum)) {} 2`] = `

Message:
> 1 | @media (theme(--minimum) < width > theme(--maximum)) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Chained media feature comparisons must place the feature between two values and use the same comparison direction.

`;

exports[`invalid(49): @media (min-grid: 1) {} 1`] = `

  1 | @media (min-grid: 1) {}

`;

exports[`invalid(49): @media (min-grid: 1) {} 2`] = `

Message:
> 1 | @media (min-grid: 1) {}
    |         ^^^^^^^^ Unknown media feature \`min-grid\`.

`;

exports[`invalid(5): @media (unknown-feature > 10px) {} 1`] = `

  1 | @media (unknown-feature > 10px) {}

`;

exports[`invalid(5): @media (unknown-feature > 10px) {} 2`] = `

Message:
> 1 | @media (unknown-feature > 10px) {}
    |         ^^^^^^^^^^^^^^^ Unknown media feature \`unknown-feature\`.

`;

exports[`invalid(50): @supports (display: grid) { .element { @media (max-width) { color: red; } } } 1`] = `

  1 | @supports (display: grid) { .element { @media (max-width) { color: red; } } }

`;

exports[`invalid(50): @supports (display: grid) { .element { @media (max-width) { color: red; } } } 2`] = `

Message:
> 1 | @supports (display: grid) { .element { @media (max-width) { color: red; } } }
    |                                                ^^^^^^^^^ Media feature \`max-width\` requires a value in plain notation.

`;

exports[`invalid(51): @import \"theme.css\" (orientation > portrait); 1`] = `

  1 | @import "theme.css" (orientation > portrait);

`;

exports[`invalid(51): @import \"theme.css\" (orientation > portrait); 2`] = `

Message:
> 1 | @import "theme.css" (orientation > portrait);
    |                      ^^^^^^^^^^^ Media feature \`orientation\` does not support range notation.

`;

exports[`invalid(52): @media (10px < 20px < unknown-feature) {} 1`] = `

  1 | @media (10px < 20px < unknown-feature) {}

`;

exports[`invalid(52): @media (10px < 20px < unknown-feature) {} 2`] = `

Message:
> 1 | @media (10px < 20px < unknown-feature) {}
    |                       ^^^^^^^^^^^^^^^ Unknown media feature \`unknown-feature\`.

`;

exports[`invalid(53): @media (10px < 20px < orientation) {} 1`] = `

  1 | @media (10px < 20px < orientation) {}

`;

exports[`invalid(53): @media (10px < 20px < orientation) {} 2`] = `

Message:
> 1 | @media (10px < 20px < orientation) {}
    |                       ^^^^^^^^^^^ Media feature \`orientation\` does not support range notation.

`;

exports[`invalid(54): @media (10px < 20px < m\\61 x-width) {} 1`] = `

  1 | @media (10px < 20px < m\\61 x-width) {}

`;

exports[`invalid(54): @media (10px < 20px < m\\61 x-width) {} 2`] = `

Message:
> 1 | @media (10px < 20px < m\\61 x-width) {}
    |                       ^^^^^^^^^^^^ Media feature \`m\\61 x-width\` does not support range notation.

`;

exports[`invalid(55): @media (width: 1\\31 px) {} 1`] = `

  1 | @media (width: 1\\31 px) {}

`;

exports[`invalid(55): @media (width: 1\\31 px) {} 2`] = `

Message:
> 1 | @media (width: 1\\31 px) {}
    |                ^^^^^^^ Invalid value \`1\\31 px\` for media feature \`width\`. Expected <length>.

`;

exports[`invalid(56): @media (width: 1\\65 2px) {} 1`] = `

  1 | @media (width: 1\\65 2px) {}

`;

exports[`invalid(56): @media (width: 1\\65 2px) {} 2`] = `

Message:
> 1 | @media (width: 1\\65 2px) {}
    |                ^^^^^^^^ Invalid value \`1\\65 2px\` for media feature \`width\`. Expected <length>.

`;

exports[`invalid(57): @media (grid: -1) {} 1`] = `

  1 | @media (grid: -1) {}

`;

exports[`invalid(57): @media (grid: -1) {} 2`] = `

Message:
> 1 | @media (grid: -1) {}
    |               ^^ Invalid value \`-1\` for media feature \`grid\`. Expected <integer [0,1]>.

`;

exports[`invalid(58): @media (grid: 1.0) {} 1`] = `

  1 | @media (grid: 1.0) {}

`;

exports[`invalid(58): @media (grid: 1.0) {} 2`] = `

Message:
> 1 | @media (grid: 1.0) {}
    |               ^^^ Invalid value \`1.0\` for media feature \`grid\`. Expected <integer [0,1]>.

`;

exports[`invalid(59): @media (theme(--minimum) < width < red) {} 1`] = `

  1 | @media (theme(--minimum) < width < red) {}

`;

exports[`invalid(59): @media (theme(--minimum) < width < red) {} 2`] = `

Message:
> 1 | @media (theme(--minimum) < width < red) {}
    |                                    ^^^ Invalid value \`red\` for media feature \`width\`. Expected <length>.

`;

exports[`invalid(6): @media (10px < unknown-feature) {} 1`] = `

  1 | @media (10px < unknown-feature) {}

`;

exports[`invalid(6): @media (10px < unknown-feature) {} 2`] = `

Message:
> 1 | @media (10px < unknown-feature) {}
    |                ^^^^^^^^^^^^^^^ Unknown media feature \`unknown-feature\`.

`;

exports[`invalid(7): @media (light-level: normal) {} 1`] = `

  1 | @media (light-level: normal) {}

`;

exports[`invalid(7): @media (light-level: normal) {} 2`] = `

Message:
> 1 | @media (light-level: normal) {}
    |         ^^^^^^^^^^^ Unknown media feature \`light-level\`.

`;

exports[`invalid(8): @media (width: red) {} 1`] = `

  1 | @media (width: red) {}

`;

exports[`invalid(8): @media (width: red) {} 2`] = `

Message:
> 1 | @media (width: red) {}
    |                ^^^ Invalid value \`red\` for media feature \`width\`. Expected <length>.

`;

exports[`invalid(9): @media (width: 10pixels) {} 1`] = `

  1 | @media (width: 10pixels) {}

`;

exports[`invalid(9): @media (width: 10pixels) {} 2`] = `

Message:
> 1 | @media (width: 10pixels) {}
    |                ^^^^^^^^ Invalid value \`10pixels\` for media feature \`width\`. Expected <length>.

`;
